--- a/css/style.scss
+++ b/css/style.scss
@@ -2,6 +2,7 @@
 	padding: 0;
 	box-sizing: border-box;
 	z-index: 0;
+    scroll-behavior: smooth;
 }
 
 *, *:before, *:before {
@@ -20,6 +21,98 @@ body {
     background-size: cover;
     margin: 0;
     font-family: 'Merriweather';
+    font-weight: 900;
     overflow-x: hidden;
+}
 
+header {
+    z-index: 100;
+    background-color: var(--primary-color);
+    height: 8vw;
+    position: fixed;
+    width: 100%;
+    display: flex;
+    object-fit: contain;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 2px 0px 15px #00000017;
+
+    a {
+        height: inherit;
+      
+        img {
+            height: inherit;
+        }
+    }
+
+}
+
+.hero{
+    background-color: black;
+    display: flex;
+    z-index: 0;
+    height: 61vw;
+    width: 100%;
+    padding-top: 8vw;
+
+    .title-box{
+        z-index: 0;
+        width: 50%;
+        padding-left: 22px;
+        h1 {
+            
+            font-size: 8vw;
+            
+        }
+        #title1{
+            color: var(--title-text);
+        }
+        #title2, #title3{
+            color: white;
+            position: absolute;
+        }
+        #title2 {
+            padding-left: 22px;
+            top: 18.55vw;
+            left: .52vw;
+        }
+        #title3 {
+            padding-left: 22px;
+            top: 28.64vw;
+            left: 18.42vw;
+        }
+        h2 {
+            font-family: "Space Mono";
+            background-color: var(--secondary-color);
+            margin-bottom: 8px;
+            width: fit-content;
+            line-height: 95%;
+            font-size: 1.17vw;
+        }
+        p {
+            color: white;
+            font-size: .97vw;
+            font-weight: 500;
+            margin-top: 2.60vw;
+        }
+    }
+
+    .hero-img {
+         width: 50%;
+         height: 100%;
+         display: flex;
+         justify-content: center;
+         object-fit: cover;
+         overflow: hidden;
+
+    }
+}
+
+
+.paragraph {
+    #intro::first-letter{
+        color: var(--secondary-color);
+        font-size: 100px;
+        font-style: black;
+    }
 }
