--- a/css/style.scss
+++ b/css/style.scss
@@ -12,8 +12,10 @@
 :root {
     --primary-color: #FBE3E6;
     --secondary-color: #E86100;
+    --secondary-color-hover: #e8610072;
     --text-color:#A79D9E;
     --title-text: #666666;
+    --lines: #707070;
 }
 
 body {
@@ -58,7 +60,7 @@ header {
     .title-box{
         z-index: 0;
         width: 50%;
-        padding-left: 22px;
+        padding-left: 1.43vw;
         h1 {
             
             font-size: 8vw;
@@ -72,19 +74,19 @@ header {
             position: absolute;
         }
         #title2 {
-            padding-left: 22px;
+            padding-left: 1.43vw;
             top: 18.55vw;
             left: .52vw;
         }
         #title3 {
-            padding-left: 22px;
+            padding-left: 1.43vw;
             top: 28.64vw;
             left: 18.42vw;
         }
         h2 {
             font-family: "Space Mono";
             background-color: var(--secondary-color);
-            margin-bottom: 8px;
+            margin-bottom: .52vw;
             width: fit-content;
             line-height: 95%;
             font-size: 1.17vw;
@@ -108,11 +110,187 @@ header {
     }
 }
 
+.divisore-social {
+
+    height: 8.46vw;
+    width: 100%;
+    border-bottom: 2px solid var(--lines);
+
+    .social-bar {
+        display: flex;
+        justify-content: space-around;
+        top: 50%;
+        height: 100%;
+        margin-left: 0px;
+        width: 50%;
+        border-right: 2px solid var(--lines);
+       
+    
+        h1 {
+            //margin-left: -8vw;
+            font-family: "Space Mono";
+            background-color: var(--secondary-color);
+            width: fit-content;
+            font-size: 1.17vw;
+            margin-top: 3.4vw;
+            margin-bottom: 3.4vw;
+            text-align: center;
+
+
+            
+        }
+
+
+        .social-links {
+            display: flex;
+            width: 9.89vw;
+            justify-content: space-around;
+            margin-top: 3vw;
+            margin-bottom: 3vw;
+            margin-left: 26vw;
+            
+
+            a {   
+                height: 2.6vw;
+                width: 2.6vw;
+                border-radius: 100%;
+
+
+                div{
+                    display: flex;
+                    background-color: var(--secondary-color);
+                    padding: 10px;
+                    border-radius: 100%;
+                    height: 2.6vw;
+                    width: 2.6vw;
+                    justify-content: center;
+                    align-items: center;
+                }
+                div:hover {
+                    background-color: var(--secondary-color-hover);
+                }
+               
+                .facebook, .twitter, .mail {
+                    img{
+                        height: 1.5vw;
+                        width: 1.5vw;
+                    }    
+                }
+            }
+        }
+    
+    }
+    
+}
+
+nav{
+    display: none;
+}
 
 .paragraph {
+    
     #intro::first-letter{
         color: var(--secondary-color);
-        font-size: 100px;
-        font-style: black;
+        font-size: 6.51vw;
+        font-weight: 900;
+
+    }
+    p {
+        color: var(--lines);
+        font-size: 1.3vw;
+        font-weight: 500;
+        width: 50%;
+        border-right: 2px solid var(--lines);
+        padding: 1.3vw;
+        padding-left: 15vw;
+    }
+
+
+}
+
+#p1 {
+
+    display: flex;
+
+    .connect {
+        background-color: var(--secondary-color);
+        width: 8.1vw;
+        height: 1.88vw;
+        border-bottom: 2px solid var(--lines);
+        position: relative;
+        top: 29.29vw;
+    }
+
+    .pullquote {
+        margin-left: -7.3vw;
+        padding-left: 1.3vw;
+        padding-right: 1.3vw;
+        width: 40vw;
+        height: 31.25vw;
+        border: 2px solid var(--lines);
+        position: relative;
+        transform: translate(18%, 50%);
+        h1 {
+            padding-top: 5.7vw;
+            font-weight: 900;
+            font-size: 3.8vw;
+            b{
+                color: var(--secondary-color);
+            }
+        }
+        h2 {
+            font-family: "Space Mono";
+            background-color: var(--secondary-color);
+            margin-bottom: .52vw;
+            width: fit-content;
+            line-height: 95%;
+            font-size: 1.17vw;
+            margin-top: 1.9vw;
+
+        }
+    }
+}
+
+.divisore-ita {
+    width: 100%;
+    background-color: black;
+    img {
+        
+        width: 100%;
+        height: 31.25vw;
+        object-fit: cover;
+        object-position: top;
+  
+    }
+    .shadow {
+        position: absolute;
+        top: 153.58072916666666vw;
+        display: block;
+        width: 100%;
+        height: 31.25vw;
+        box-shadow: inset 10px 10px 35px rgba(0, 0, 0, 0.9); 
+    }
+}
+
+
+
+footer{
+    background-color: black;
+    height: 7.68vw;
+    display: flex;
+
+    img{
+        filter: invert(1);
+        padding-left: 6.51vw;
+        margin-top: 1.2vw;
+        margin-bottom: 1.2vw;
+    }
+    h1 {
+        font-size: .97vw;
+        color: white;
+        font-style: normal;
+        font-weight: 500;
+        margin-top: 3.25vw;
+        margin-left: 1.67vw;
     }
 }
