--- a/css/style.css
+++ b/css/style.css
@@ -280,6 +280,7 @@ nav {
 .divisore-ita {
   width: 100%;
   background-color: black;
+  height: 31.25vw;
 }
 
 .divisore-ita img {
@@ -292,8 +293,8 @@ nav {
 }
 
 .divisore-ita .shadow {
-  position: absolute;
-  top: 153.58072916666666vw;
+  position: relative;
+  top: -31.25vw;
   display: block;
   width: 100%;
   height: 31.25vw;
