--- a/css/style.scss
+++ b/css/style.scss
@@ -498,6 +498,28 @@ nav{
     }
 }
 
+#p6 {
+
+    display: flex;
+    flex-direction: column;
+
+    #p-white{
+        color: white;
+        z-index: 10;
+        border: none;
+    }
+
+    img {
+        object-fit: cover;
+        width: 100%;
+        height: 75vw;
+        position: relative;
+        z-index: 0;
+        bottom: 74vw;
+
+    }
+}
+
 
 //Settings footer
 footer{
