--- a/css/style.css
+++ b/css/style.css
@@ -302,7 +302,7 @@ nav {
           box-shadow: inset 10px 10px 35px rgba(0, 0, 0, 0.9);
 }
 
-#p2 h1, #p4 h1, #p5 h1, #p6 h1 {
+#p2 h1, #p4 h1, #p5 h1, #p6 h1, #p7 h1 {
   font-weight: 900;
   font-size: 3.8vw;
   width: 50%;
@@ -312,7 +312,7 @@ nav {
   padding-bottom: 2vw;
 }
 
-#p2 h1 b, #p4 h1 b, #p5 h1 b, #p6 h1 b {
+#p2 h1 b, #p4 h1 b, #p5 h1 b, #p6 h1 b, #p7 h1 b {
   color: var(--secondary-color);
 }
 
@@ -605,6 +605,42 @@ nav {
           flex-direction: column;
 }
 
+#p6 .par1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+#p6 .par1 .vid-occasioni {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  -webkit-transform: translate(18%, 50%);
+          transform: translate(18%, 50%);
+  height: 31.25vw;
+  width: 40vw;
+  border: 0.13vw solid var(--lines);
+  left: -8.1vw;
+}
+
+#p6 .par1 .vid-occasioni iframe {
+  height: 26vw;
+  width: 40vw;
+  margin-top: 5.07vw;
+}
+
+#p6 .par1 .connect {
+  background-color: var(--secondary-color);
+  width: 8.1vw;
+  height: 1.88vw;
+  border-bottom: 0.13vw solid var(--lines);
+  position: relative;
+  top: 29.29vw;
+}
+
 #p6 #p-white {
   color: white;
   z-index: 10;
@@ -619,6 +655,114 @@ nav {
   position: relative;
   z-index: 0;
   bottom: 74vw;
+}
+
+#p7 {
+  margin-top: -74vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+#p7 h1 {
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
+}
+
+#p7 p {
+  -webkit-box-ordinal-group: 4;
+      -ms-flex-order: 3;
+          order: 3;
+  margin-top: -53vw;
+}
+
+#p7 .img-box {
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
+  width: 50%;
+  height: 63.8vw;
+  padding-top: 8vw;
+}
+
+#p7 .box1, #p7 .box2, #p7 .box3, #p7 .box4, #p7 .box5 {
+  border: 0.13vw solid var(--lines);
+}
+
+#p7 .box1 {
+  width: 28.45vw;
+  height: 19vw;
+  margin-top: 2.92vw;
+  margin-left: 7.16vw;
+}
+
+#p7 #img1 {
+  width: 28.2vw;
+  margin-top: 2.9vw;
+}
+
+#p7 .box2 {
+  width: 15.7vw;
+  height: 9.5vw;
+  margin-top: 5vw;
+  margin-left: 10vw;
+}
+
+#p7 #img2 {
+  width: 15.45vw;
+  margin-top: 2vw;
+}
+
+#p7 .box3 {
+  width: 20.7vw;
+  height: 14.2vw;
+  margin-top: -13.3vw;
+  margin-left: 27vw;
+}
+
+#p7 #img3 {
+  width: 20.5vw;
+  margin-top: 2.4vw;
+}
+
+#p7 .box4 {
+  width: 25.7vw;
+  height: 14.3vw;
+  margin-top: 1vw;
+  margin-left: 12vw;
+}
+
+#p7 #img4 {
+  width: 25.45vw;
+  margin-top: 2vw;
+}
+
+#p7 .box5 {
+  width: 11.7vw;
+  height: 8.7vw;
+  margin-top: 1vw;
+  margin-left: 35vw;
+}
+
+#p7 #img5 {
+  width: 11.45vw;
+  margin-top: 2vw;
+}
+
+.img-bot {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.img-bot img {
+  -o-object-fit: contain;
+     object-fit: contain;
+  width: 100%;
 }
 
 footer {
