--- a/css/style.scss
+++ b/css/style.scss
@@ -10,7 +10,7 @@
 }
 
 :root {
-    --primary-color: #FBE3E6;
+    --primary-color: #000000;
     --secondary-color: #E86100;
     --secondary-color-hover: #e8610072;
     --text-color:#A79D9E;
