--- a/css/style.scss
+++ b/css/style.scss
@@ -23,7 +23,7 @@ body {
     background-size: cover;
     margin: 0;
     font-family: 'Merriweather';
-    font-weight: 900;
+    font-weight: 500;
     overflow-x: hidden;
 }
 //Settings Header
@@ -675,3 +675,4 @@ footer{
         margin-left: 1.67vw;
     }
 }
+//cazzo in culo non fa figli
