--- a/css/style.scss
+++ b/css/style.scss
@@ -656,7 +656,7 @@ nav{
 
 //Settings footer
 footer{
-    background-color: black;
+    background-color: white;
     height: 7.68vw;
     display: flex;
 
