--- a/css/style.scss
+++ b/css/style.scss
@@ -668,7 +668,7 @@ footer{
     }
     h1 {
         font-size: .97vw;
-        color: white;
+        color: black;
         font-style: normal;
         font-weight: 500;
         margin-top: 3.25vw;
