--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,24 @@ header a img {
 
 nav {
   position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 11830px;
+  z-index: 10;
+}
+
+nav ul {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 8vw;
 }
 
 nav a {
@@ -218,14 +236,14 @@ nav a {
 }
 
 nav li {
+  display: block;
+  color: black;
   font-family: "Space Mono";
   background-color: var(--secondary-color);
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
   font-size: 1.17vw;
-  margin-top: 3.4vw;
-  margin-bottom: 3.4vw;
   text-align: center;
 }
 
